Alvin/Sattar: Fix spacing in footer

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -3,10 +3,15 @@
   position: fixed;
   width: 100%;
   height: 55px;
+  padding-top: 15px;
+}
+#footer .row {
+  margin-top: 0;
 }
 
 body {
   padding-top: 66px;
+  padding-bottom: 55px;
 }
 
 .login-modal-dialog {
